public interface Interface {

    void cadastrarLivro(Livro livro);
    void cadastrarUsuario(Usuario usuario);
    void buscarUsuario(int idUsuario);
    void buscarUsuarioNome(String nomeUsuario);
    void buscarLivro(int codigoLivro);
    void buscarLivroTitulo(String tituloLivro);
    void realizarEmprestimo(int codigoLivro, int idUsuario);
    void realizarDevolucao(int codigoLivro, int idUsuario);
    void listarlivroscadastrados();
    void listarlivrosdisponiveis();
    void listarlivrosemprestados();
    void listarlivrosemprestadosUsuario(int idUsuario);
}
